--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                         </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/media.jpg"/>
+                    <img src="pro/media.png"/>
                     <div class="portfolio-details">
                         <p>MUSIC PLAYER WEB-APP</p>
                     </div>
