--- a/index.html
+++ b/index.html
@@ -456,62 +456,62 @@
                     </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/east.jpg"/>
+                    <img src="pro/east.png"/>
                     <div class="portfolio-details">
                         <p>Eastlang Profile Daskbord WEB-APP</p>
                     </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/hmh.jpg"/>
+                    <img src="pro/hmh.png"/>
                     <div class="portfolio-details">
                         <p>Device Records Managment system in WEB-APP</p>
                     </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/idcard.jpg"/>
+                    <img src="pro/idcard.png"/>
                     <div class="portfolio-details">
                         <p>ID card Generator in WEB-APP</p>
                     </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/mes.jpg"/>
+                    <img src="pro/mes.png"/>
                     <div class="portfolio-details">
                         <p>Students Database in WEB-APP</p>
                     </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/mesteacher.jpg"/>
+                    <img src="pro/mesteacher.png"/>
                     <div class="portfolio-details">
                         <p>Teacher Daily Report in WEB-APP</p>
                     </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/tracker.jpg"/>
+                    <img src="pro/tracker.png"/>
                     <div class="portfolio-details">
                         <p>Employ Productivity Tracker in WEB-APP</p>
                     </div>
                 </div>
                 
                 <div class="portfolio-image-container">
-                    <img src="pro/astartup.jpg"/>
+                    <img src="pro/astartup.png"/>
                     <div class="portfolio-details">
                         <p>Astartup Company in WEB-APP</p>
                     </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/career.jpg"/>
+                    <img src="pro/career.png"/>
                     <div class="portfolio-details">
                         <p>Career Website in WEB-APP</p>
                     </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/2.jpg"/>
+                    <img src="pro/2.png"/>
                     <div class="portfolio-details">
                         <p>Calculator project In Java</p>
                     </div>
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="pro/crfg.jpg"/>
+                    <img src="pro/crfg.png"/>
                     <div class="portfolio-details">
                         <p>CRFG project in Java</p>
                     </div>
